--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "vite": "^2.2.4"
   },
   "dependencies": {
-    "@angular/core": "^11.2.12"
+    "@angular/core": "^11.2.12",
+    "@angular/platform-browser-dynamic": "^11.2.12"
   }
 }
