--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "vite": "^2.2.4"
   },
   "dependencies": {
+    "@angular/common": "^11.2.12",
+    "@angular/compiler": "^11.2.12",
     "@angular/core": "^11.2.12",
-    "@angular/platform-browser-dynamic": "^11.2.12"
+    "@angular/platform-browser": "^11.2.12",
+    "@angular/platform-browser-dynamic": "^11.2.12",
+    "rxjs": "^6.6.7"
   }
 }
