--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@angular/core": "^11.2.12",
     "@angular/platform-browser": "^11.2.12",
     "@angular/platform-browser-dynamic": "^11.2.12",
-    "rxjs": "^6.6.7"
+    "rxjs": "^6.6.7",
+    "zone.js": "^0.11.4"
   }
 }
